// ライセンスはいつか書いておく

syntax = "proto3";

package gantrycd.k8s_controller.v1;

import "google/protobuf/empty.proto";

option go_package = "github.com/gantrycd/backend/api/proto/pb/k8s-controller/v1";

service K8sCustomController {
  // Namespace Control
  rpc CreateNamespace(CreateNamespaceRequest) returns(CreateNamespaceReply);
  rpc ListNamespaces(google.protobuf.Empty) returns(ListNamespacesReply);
  rpc DeleteNamespace(DeleteNamespaceRequest) returns(google.protobuf.Empty);

  // Deployment Control
  rpc ApplyDeployment(CreateDeploymentRequest) returns(CreateDeploymentReply);
  rpc DeleteDeployment(DeleteDeploymentRequest) returns(google.protobuf.Empty);



  // Resource Control
  rpc GetAlls(google.protobuf.Empty) returns(GetAllsReply);
  rpc GetOrgRepos(GetOrgRepoRequest) returns(GetOrgReposReply);

  rpc CreatePreview(CreatePreviewRequest) returns(CreatePreviewReply);
  rpc UpdatePreview(CreatePreviewRequest) returns(CreatePreviewReply);
  rpc DeletePreview(DeletePreviewRequest) returns(google.protobuf.Empty);
  

  rpc GetResource(GetResourceRequest) returns (GetResourceReply);
}

message CreateNamespaceRequest {
  string name = 1;
}

message CreateNamespaceReply {
  string name = 1;
}

message ListNamespacesReply {
  repeated string names = 1;
}

message DeleteNamespaceRequest {
  string name = 1;
}

message CreateDeploymentRequest {
  string namespace = 1;
  string repository = 2;
  string pr_number = 3;
  string image = 4;
  string branch = 5;
  string app_name = 6;
  string replicas = 7;
  string created_by = 8;
}

message CreateDeploymentReply {
  string namespace = 1;
  string name = 2;
  string version = 3;
}

message DeleteDeploymentRequest {
  string namespace = 1;
  string repository = 2;
  string pr_number = 3;
}

message GetOrgRepoRequest {
  string organization = 1;
}

message repository {
  string name = 1;
  string pull_request_id = 2;
  string branch = 3;
};

message application {
  string name = 1;
  string status = 2;
  string version = 3;
  string image = 4;
  string age = 5;
};

message GetOrgReposReply {
  string organization = 1;
  repeated repository repositories = 2;
  repeated application applications = 3;
}

message GetAllsReply {
  repeated GetOrgReposReply organization_infos = 1;
};

message GetResourceRequest {
  string organization = 1;
  string repository = 2;
};

message Usage {
  string container_name = 1;
  int64 cpu = 2;
  int64 mem = 3;
  int64 storage =4;
};

message Resource {
  string app_name = 1;
  string pod_name = 2;
  string pull_request_id = 3;
  string branch = 4;
  repeated Usage usages = 5;
};

message GetResourceReply {
  repeated Resource resources = 1;
  bool is_disable = 2;
};

message DeletePreviewRequest {
  string organization = 1;
  string repository = 2;
  string pull_request_id = 3;
  string branch = 4;
};

message CreatePreviewRequest {
  string organization = 1;
  string repository = 2;
  string pull_request_id = 3;
  string branch = 4; 
  string image = 5;
  string image_pull_policy = 6;
  string replicas = 7;
};

message CreatePreviewReply {
  string namespace = 1;
  string name = 2;
  string version = 3;
  string nodePort = 4;
}